--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.6",
-    "bootstrap": "4",
+    "bootstrap": "^5.2.3",
+    "mui": "^0.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -19,7 +20,8 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.9",
+    "reactstrap": "^9.1.10",
+    "styled-components": "^5.3.10",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
